# Miku-LuaProfiler

./: .gitignore  README.md  link.bat  link.sh  package.json
Client/Assets/XLua/Src/: CodeEmit.cs  LuaBase.cs  LuaDLL.cs  ObjectCasters.cs  ObjectTranslator.cs  StaticLuaCallbacks.cs  TypeExtensions.cs  Utils.cs
Editor/: MikuLuaProfiler.Editor.asmdef
Editor/Window/Client/: LuaProfilerSettingWindow.cs
Editor/Window/ProfilerWin/TreeView/: LuaDiffScrollView.cs
InjectTool/InjectToLua/: inject.sh
InjectTool/InjectToLua/InjectToLua/: Program.cs
InjectTool/InjectToLua/InjectToLua/Properties/: AssemblyInfo.cs
Lua/: main.lua  protoc.lua  test.lua
LuaProfiler/: LuaHookSetup.cs
LuaProfiler/Common/: LuaDeepProfilerSetting.cs  LuaProfiler.cs  Sample.cs
LuaProfiler/Common/Editor/: LocalToLuaIDE.cs
LuaProfiler/Common/Editor/TreeView/: LuaProfilerTreeView.cs  LuaProfilerWindow.cs
LuaProfiler/Common/Inject/: InjectMethods.cs
LuaProfiler/Common/Parse/: LLex.cs  Parse.cs
LuaProfiler/Common/UnityHook/: HookerPool.cs
LuaProfiler/Core/Driver/Parse/: Common.cs  Util.cs
LuaProfiler/Core/NetWork/: MBinaryWriter.cs
LuaProfiler/Editor/: StartUp.cs
LuaProfiler/Editor/Window/ProfilerWin/: LocalToLuaIDE.cs
LuaProfiler/Exsample/Assets/XLua/: CHANGELOG.txt
LuaProfiler/HookSetup/: LuaHookSetup.cs  SLuaHookSetup.cs  ToLuaHookSetup.cs  XLuaHookSetup.cs
LuaProfiler/LuaProfilerClient/: LuaHookSetup.cs
LuaProfiler/LuaProfilerClient/Common/: ByteBuf.cs  Sample.cs
LuaProfiler/LuaProfilerClient/Core/: LuaHookSetup.cs  LuaProfiler.cs
LuaProfiler/LuaProfilerClient/Core/Driver/: List.cs  LuaDLL.cs  LuaProfiler.cs  NativeHelper.cs  ObjectPool.cs  Sample.cs
LuaProfiler/LuaProfilerClient/Core/Inject/: InjectMethods.cs
LuaProfiler/LuaProfilerClient/Core/NetWork/: NetWorkClient.cs  NetWorkServer.cs
LuaProfiler/LuaProfilerClient/Core/Parse/: LLex.cs  Util.cs
LuaProfiler/LuaProfilerClient/Core/Setting/: LuaDeepProfilerAssetSetting.cs  LuaDeepProfilerSetting.cs
LuaProfiler/LuaProfilerClient/Editor/: LuaDeepProfilerSetting.cs  StartUp.cs
LuaProfiler/LuaProfilerClient/Editor/Inject/: InjectMethods.cs
LuaProfiler/LuaProfilerClient/Editor/TreeView/: LuaProfilerWindow.cs
LuaProfiler/LuaProfilerClient/Editor/Util/: GameViewUtility.cs
LuaProfiler/LuaProfilerClient/Editor/Window/: LuaDiffScrollView.cs  LuaProfilerWindow.cs
LuaProfiler/LuaProfilerClient/Resources/: LuaDeepProfilerSettings.bytes
LuaProfiler/LuaProfilerServer/Assets/Editor/: LocalToLuaIDE.cs
LuaProfiler/LuaProfilerServer/Assets/Script/: Test.cs
LuaProfiler/LuaProfilerServer/Common/: ByteBuf.cs  ObjectPool.cs  Sample.cs
LuaProfiler/LuaProfilerServer/Core/NetWork/: NetWorkServer.cs
LuaProfiler/LuaProfilerServer/Editor/Common/: ObjectPool.cs  Sample.cs
LuaProfiler/LuaProfilerServer/Editor/NetWork/: NetWorkServer.cs
LuaProfiler/LuaProfilerServer/Editor/Setting/: LuaDeepProfilerSetting.cs
LuaProfiler/LuaProfilerServer/Editor/Skin/: GUISkin.guiskin  TPGuiSkinManager.cs  TopFunctionsGUISkin.guiskin
LuaProfiler/Runtime/: MIkuLuaProfiler.Runtime.asmdef
LuaProfiler/Runtime/Core/: LuaHookSetup.cs
LuaProfiler/Tools/: Template.lua
LuaProfiler/Tools/LuaProfilerWinform/: TreeGridView.sln
LuaProfiler/Tools/MikuBinary/: MikuBinary.sln
LuaProfiler/Tools/MikuHook/: MikuHook.sln
LuaProfiler/Tools/MonoHooker/: HookerPool.cs  IL2CPPHelper.cs  LDasm.cs  MethodHooker.cs
LuaProfiler/Tools/mikuhook_runtime/: miku_profiler.c
LuaProfiler/Tools/monohook_runtime/: build_android.bat  build_profiler_win32.sh  build_profiler_win64.sh  build_win32.sh  build_win64.sh
LuaProfiler/Tools/shadowhook/: ShadowHook.java
LuaProfiler~/Tools/: Template.lua
LuaProfiler~/Tools/DobbyHook/: CMakeLists.txt  api.c  build_android.bat  build_ios.sh  build_osx.sh
LuaProfiler~/Tools/DobbyHook/Dobby/: CMakeLists.txt
LuaProfiler~/Tools/InjectLuaCPP/: CMakeLists.txt
LuaProfiler~/Tools/LuaProfilerWinform/: LuaProfilerWinform.sln
LuaProfiler~/Tools/mikuhook_runtime/: build_win32.sh
Release/: SLUA.sh  TOLUA.sh  XLUA.sh
Release/LuaProfiler/: LuaHookSetup.cs
Release/LuaProfiler/Common/: LuaDeepProfilerSetting.cs  LuaProfiler.cs  ObjectPool.cs  Sample.cs
Runtime/Core/: LuaHookSetup.cs
SLua/Assets/: LuaDeepProfilerSettings.asset
SLuaClient/Assets/Resources/: LuaDeepProfilerSettings.bytes
Server/Assets/: Editor.unity
TestParse/: Template.lua
ToLua/Assets/: LuaDeepProfilerSettings.asset
ToLuaClient/Assets/Resources/: LuaDeepProfilerSettings.bytes
XLua/Assets/: LuaDeepProfilerSettings.asset
XLua/Assets/XLua/: CHANGELOG.txt
XLua/Assets/XLua/Src/: LuaEnv.cs  (+2 more)
XLuaClient/Assets/XLua/: CHANGELOG.txt
doc/TestParse/: Template.lua
~LuaProfiler/Tools/InjectLua/: InjectLua.sln
~LuaProfiler/Tools/mikuhook_runtime/: build_profiler_win64.sh  build_win64.sh
(+1077 files in other folders)
